--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leijona",
-  "version": "1.0.3",
+  "version": "1.0.1",
   "description": "Line count tool for modern applications",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "leijona"
   ],
   "bin": {
-    "leijona": "./bin/leijona"
+    "leijona": "./index.js"
   },
   "author": "Brian Wilbur",
   "license": "GPL-3.0",
