--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leijona",
-  "version": "1.0.6",
+  "version": "1.0.1",
   "description": "Line count tool for modern applications",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "metrics",
     "leijona"
   ],
+  "bin": "./bin/leijona",
   "author": "Brian Wilbur",
   "license": "GPL-3.0",
   "bugs": {
